# quantplatform

./: .gitignore  AGENTS.md  HANDOFF.md  Makefile  PROJECT_CONTEXT.md  PROJECT_MEMORY.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  us-stock-trading-system-outline.md
config/: risk.example.yaml  settings.example.yaml  universe.example.yaml
docs/architecture/: ai-analysis-design.md  product-objects.md  stock-screening-design.md  tradingagents-cn-reference.md  ui-architecture-review-2026-05-03.md
docs/data-sources/: longbridge-integration.md
docs/operations/: daily-refresh-schedule.md  data-api-limits.md  operation-logs.md
docs/strategy/: options-assistant-v2-notes.md  options-strategy-mvp.md  scanner-strategy-v1.md  strategy-v1.md
scripts/: analyze.py  analyze_longbridge_portfolio.py  bootstrap_local_state.py  build_nasdaq100_pool.py  build_preset_pools.py  build_universe.py  compute_indicators.py  detect_signals.py  evaluate_option_strategy.py  extract_option_screenshot.py  generate_account_health.py  generate_daily_report.py  generate_macro_risk.py  generate_options_advice.py  install_daily_refresh_launchd.py  query_longbridge_quote.py  review_trades.py  run_auto_scan.py  run_daily_refresh.py  scan_sell_put_candidates.py  serve_ui.py  sync_longbridge_stock_pool.py  update_market_events.py  update_market_overview_history.py  update_pool_snapshots.py  update_yfinance_history.py
src/quant_platform/: __init__.py  config.py  console_output.py  time_utils.py
tasks/: backlog.md  plan.md  roadmap.md  work_journal.md  worklog.md
ui/: index.html
(+228 files in other folders)
