[project]
name = "quant-platform"
version = "0.1.0"
description = "Research-driven quantitative trading platform"
requires-python = ">=3.11"
dependencies = [
  "pandas>=3.0",
  "pyarrow>=24.0",
  "yfinance>=1.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
